[package]
name = "dynamic"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { path = "../common", features = ["user"] }
trust-dns-resolver = "0.23" # Add for DNS resolution
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true }
env_logger = { workspace = true }