[package]
name = "ebpf-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
#common = { path = "../common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebpf-loader"
path = "src/main.rs"
