[package]
name = "xdp-filter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-filter-common = { path = "../xdp-filter-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-filter"
path = "src/main.rs"
